[package]
name = "garasu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
cng = { version = "0.0.1", path = "./cng/"}
log = "0.4.16"
env_logger = "0.9.0"
